compiler/testData/diagnostics/tests/typealias/typeAliasConstructorForInterface.fir.kt
interface IFoo

typealias Test = IFoo

val testAsFunction = <!INTERFACE_AS_FUNCTION!>Test<!>()
val testAsValue = <!NO_COMPANION_OBJECT!>Test<!>
